--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>    
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <title>Hayden VonCannon</title>
@@ -11,22 +14,24 @@
 <body background="./assets/images/cork-wallet.png">
     
   <nav class="navbar navbar-expand-lg navbar-light bg-white p-l-3">
+    <div class="container">
       <a class="navbar-brand" href="./index.html">Hayden VonCannon</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link active" href="#">About <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link active" href="./index.html">About <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="./Portfolio.html">Portfolio</a>
-          <a class="nav-item nav-link" href="#">Contact</a>
+          <a class="nav-item nav-link" href="./contact.html">Contact</a>
         </div>
       </div>
+    </div>
     </nav>
 
     <div class="container">
-      <div class="row">
-        <div class="col-md-12 p-3 mb-2 bg-white text-dark border m-5">
+      <div class="row justify-content-center">
+        <div class="col-md-12 p-3 mb-2 bg-white text-dark border m-5 align-content-center">
 
             <h3 class="text-success pb-2 border-bottom">About Me</h3>
             <img src="./assets/images/smaller headshot.jpg" class="rounded float-left mr-3" width="200px">
@@ -47,7 +52,6 @@
               My goal is to move into a web development job after completing the program. 
               In my free time I enjoy bad movies, video games, and IPAs.</p>
             </div>
-
         </div>
       </div>
     </div>
