--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>    
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <title>Portfolio</title>
@@ -11,6 +14,7 @@
 <body background="./assets/images/cork-wallet.png">
     
   <nav class="navbar navbar-expand-lg navbar-light bg-white p-l-3">
+      <div class="container">
       <a class="navbar-brand" href="index.html">Hayden VonCannon</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -22,10 +26,11 @@
           <a class="nav-item nav-link" href="./contact.html">Contact</a>
         </div>
       </div>
+    </div>
     </nav>
 
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
             <div class="col-md-12 bg-white text-dark border m-5 p-3">
                 <h3 class="text-success border-bottom pb-2">Portfolio</h3>
                 <div class="row">
@@ -34,22 +39,22 @@
                         <div class="carousel-caption bg-success p-1"><a class="text-white" href="">Hangman</a></div>
                     </div>
                     <div class="col-sm mb-2">
-                        <img class="img-fluid" src="./assets/images/animals-q-c-250-200-8.jpg">
+                        <img class="img-fluid" src="./assets/images/city-q-c-640-480-6.jpg">
                         <div class="carousel-caption bg-success p-1"><a class="text-white" href="">RPG Game</a></div>
                     </div>
                     <div class="col-sm mb-2">
-                        <img class="img-fluid" src="./assets/images/food-q-c-250-200-3.jpg">
+                        <img class="img-fluid" src="./assets/images/abstract-q-c-640-480-2.jpg">
                         <div class="carousel-caption bg-success p-1"><a class="text-white" href="">Trivia Game</a></div>
                     </div>
                 </div>
                 
-        <div class="row">
+        <div class="row justify-content-center">
                     <div class="col-sm-4 mb-2"> 
-                        <img class="img-fluid" src="./assets/images/food-q-c-250-200-5.jpg">
+                        <img class="img-fluid" src="./assets/images/food-q-c-640-480-4.jpg">
                         <div class="carousel-caption bg-success p-1"><a class="text-white" href="">Rutgers Info Widget</a></div>
                     </div>
                     <div class="col-sm-4 mb-2"> 
-                        <img class="img-fluid" src="./assets/images/nightlife-q-c-250-200-7.jpg">
+                        <img class="img-fluid" src="./assets/images/technics-q-c-640-480-7.jpg">
                         <div class="carousel-caption bg-success p-1"><a class="text-white" href="">Rock Paper Scissors</a></div>
                     </div>
                 </div>
