--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="./index.html">About</a>
-          <a class="nav-item nav-link" href="./Portfolio.html">Portfolio</a>
+          <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
           <a class="nav-item nav-link active" href="./contact.html">Contact</a><span class="sr-only">(current)</span></a>
         </div>
       </div>
