--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse flex-row-reverse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-item nav-link" href="./index.html">About</a>
-          <a class="nav-item nav-link active" href="./Portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link active" href="./portfolio.html">Portfolio<span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="./contact.html">Contact</a>
         </div>
       </div>
